Pandas Classwork File

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -9729,25 +9729,551 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a9be7ad-1985-4ffd-a958-1bc1e6add131",
+   "cell_type": "markdown",
+   "id": "57eab2f6-94d4-4ff5-aa94-9f7c06387127",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Reading Data to a DataFrame from External Sources**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "id": "2fe702eb-c75f-4cf9-9f21-92f1d463326c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from the .CSV file...\n",
+      "Data has been read successfully...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>education</th>\n",
+       "      <th>management</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13876</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11608</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ph.D</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18701</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ph.D</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11283</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Master</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11767</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ph.D</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary  experience education management\n",
+       "0   13876           1  Bachelor          Y\n",
+       "1   11608           1      Ph.D          N\n",
+       "2   18701           1      Ph.D          Y\n",
+       "3   11283           1    Master          N\n",
+       "4   11767           1      Ph.D          N"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print (\"Reading data from the .CSV file...\")\n",
+    "    # df = pd.read_csv(\"./salary_table.csv\")    # . denotes present directory\n",
+    "    # df = pd.read_csv(\"C:\\\\Users\\Arnab\\AEC MCA Project Guidance 2024\\salary_table.csv\")\n",
+    "    # df = pd.read_csv(\"C:\\\\Users\\\\Arnab\\\\AEC MCA Project Guidance 2024\\\\salary_table.csv\")\n",
+    "    # df = pd.read_csv(\"C:/Users/Arnab/AEC MCA Project Guidance 2024/salary_table.csv\")\n",
+    "    # df = pd.read_csv(\"C://Users//Arnab//AEC MCA Project Guidance 2024//salary_table.csv\")\n",
+    "    df = pd.read_csv(\"C:/Users//Arnab\\AEC MCA Project Guidance 2024\\\\salary_table.csv\")\n",
+    "    print (\"Data has been read successfully...\")\n",
+    "except:\n",
+    "    print (\"File access error !!!\")\n",
+    "    print (\"Data file could not be read successfully...\")\n",
+    "    \n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "104db87a-f4da-46b8-ba44-6cbebc93ab94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from the .XLSX file...\n",
+      "Data has been read successfully...\n",
+      "(15, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INVOICENO</th>\n",
+       "      <th>STOCKCODE</th>\n",
+       "      <th>DESCRIPTION</th>\n",
+       "      <th>QUANTITY</th>\n",
+       "      <th>INVOICEDATE</th>\n",
+       "      <th>UNITPRICE</th>\n",
+       "      <th>CUSTOMERID</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22728</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE PINK</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22727</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE RED</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21791</td>\n",
+       "      <td>VINTAGE HEADS AND TAILS CARD GAME</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21035</td>\n",
+       "      <td>SET/2 RED RETROSPOT TEA TOWELS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>536527</td>\n",
+       "      <td>POST</td>\n",
+       "      <td>POSTAGE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-12-01 13:04:00</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>12662</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    INVOICENO STOCKCODE                         DESCRIPTION  QUANTITY  \\\n",
+       "10     536370     22728           ALARM CLOCK BAKELIKE PINK        24   \n",
+       "11     536370     22727           ALARM CLOCK BAKELIKE RED         24   \n",
+       "12     536370     21791  VINTAGE HEADS AND TAILS CARD GAME         24   \n",
+       "13     536370     21035     SET/2 RED RETROSPOT TEA TOWELS         18   \n",
+       "14     536527      POST                             POSTAGE         1   \n",
+       "\n",
+       "           INVOICEDATE  UNITPRICE  CUSTOMERID  COUNTRY  \n",
+       "10 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "11 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "12 2010-12-01 08:45:00       1.25       12583   France  \n",
+       "13 2010-12-01 08:45:00       2.95       12583   France  \n",
+       "14 2010-12-01 13:04:00      18.00       12662  Germany  "
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print (\"Reading data from the .XLSX file...\")\n",
+    "    df = pd.read_excel(\"./Online Retail.xlsx\")\n",
+    "    print (\"Data has been read successfully...\")\n",
+    "except:\n",
+    "    print (\"File access error !!!\")\n",
+    "    print (\"Data file could not be read successfully...\")\n",
+    "    \n",
+    "print (df.shape)\n",
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "8caa9b51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from the .XLSX file...\n",
+      "File access error !!!\n",
+      "Data file could not be read successfully...\n",
+      "(15, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INVOICENO</th>\n",
+       "      <th>STOCKCODE</th>\n",
+       "      <th>DESCRIPTION</th>\n",
+       "      <th>QUANTITY</th>\n",
+       "      <th>INVOICEDATE</th>\n",
+       "      <th>UNITPRICE</th>\n",
+       "      <th>CUSTOMERID</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22728</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE PINK</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22727</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE RED</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21791</td>\n",
+       "      <td>VINTAGE HEADS AND TAILS CARD GAME</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21035</td>\n",
+       "      <td>SET/2 RED RETROSPOT TEA TOWELS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>536527</td>\n",
+       "      <td>POST</td>\n",
+       "      <td>POSTAGE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-12-01 13:04:00</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>12662</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    INVOICENO STOCKCODE                         DESCRIPTION  QUANTITY  \\\n",
+       "10     536370     22728           ALARM CLOCK BAKELIKE PINK        24   \n",
+       "11     536370     22727           ALARM CLOCK BAKELIKE RED         24   \n",
+       "12     536370     21791  VINTAGE HEADS AND TAILS CARD GAME         24   \n",
+       "13     536370     21035     SET/2 RED RETROSPOT TEA TOWELS         18   \n",
+       "14     536527      POST                             POSTAGE         1   \n",
+       "\n",
+       "           INVOICEDATE  UNITPRICE  CUSTOMERID  COUNTRY  \n",
+       "10 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "11 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "12 2010-12-01 08:45:00       1.25       12583   France  \n",
+       "13 2010-12-01 08:45:00       2.95       12583   France  \n",
+       "14 2010-12-01 13:04:00      18.00       12662  Germany  "
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print (\"Reading data from the .XLSX file...\")\n",
+    "    df = pd.read_excel(\"./Online Retail.xlsx\", sheet_name=\"sheet2\")\n",
+    "    print (\"Data has been read successfully...\")\n",
+    "except:\n",
+    "    print (\"File access error !!!\")\n",
+    "    print (\"Data file could not be read successfully...\")\n",
+    "    \n",
+    "print (df.shape)\n",
+    "df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "389d1a2c-2963-41d5-ad22-d04d6cec208c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading data from the .XLSX file...\n",
+      "File access error !!!\n",
+      "Data file could not be read successfully...\n",
+      "(15, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22728</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE PINK</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>22727</td>\n",
+       "      <td>ALARM CLOCK BAKELIKE RED</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21791</td>\n",
+       "      <td>VINTAGE HEADS AND TAILS CARD GAME</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>536370</td>\n",
+       "      <td>21035</td>\n",
+       "      <td>SET/2 RED RETROSPOT TEA TOWELS</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2010-12-01 08:45:00</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>12583</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>536527</td>\n",
+       "      <td>POST</td>\n",
+       "      <td>POSTAGE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010-12-01 13:04:00</td>\n",
+       "      <td>18.00</td>\n",
+       "      <td>12662</td>\n",
+       "      <td>Germany</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    InvoiceNo StockCode                         Description  Quantity  \\\n",
+       "10     536370     22728           ALARM CLOCK BAKELIKE PINK        24   \n",
+       "11     536370     22727           ALARM CLOCK BAKELIKE RED         24   \n",
+       "12     536370     21791  VINTAGE HEADS AND TAILS CARD GAME         24   \n",
+       "13     536370     21035     SET/2 RED RETROSPOT TEA TOWELS         18   \n",
+       "14     536527      POST                             POSTAGE         1   \n",
+       "\n",
+       "           InvoiceDate  UnitPrice  CustomerID  Country  \n",
+       "10 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "11 2010-12-01 08:45:00       3.75       12583   France  \n",
+       "12 2010-12-01 08:45:00       1.25       12583   France  \n",
+       "13 2010-12-01 08:45:00       2.95       12583   France  \n",
+       "14 2010-12-01 13:04:00      18.00       12662  Germany  "
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print (\"Reading data from the .XLSX file...\")\n",
+    "    df = pd.read_excel(\"./Online Retail.xlsx\", sheet_name=\"sheet1\")\n",
+    "    print (\"Data has been read successfully...\")\n",
+    "except:\n",
+    "    print (\"File access error !!!\")\n",
+    "    print (\"Data file could not be read successfully...\")\n",
+    "    \n",
+    "print (df.shape)\n",
+    "df.tail()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8caa9b51",
+   "id": "31de26e1-4dfb-4540-8c5c-a5dde323864f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9755,7 +10281,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389d1a2c-2963-41d5-ad22-d04d6cec208c",
+   "id": "25cb495a-b79a-463c-8ae1-03744118d506",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28804d17-6dc6-4475-afa3-795f8cf1b94e",
    "metadata": {},
    "outputs": [],
    "source": []
