Pandas Classwork File

--- a/Pandas.ipynb
+++ b/Pandas.ipynb
@@ -11724,7 +11724,7 @@
    "id": "7c89e4c1-01b0-4ee7-b7a6-e6c8bb176a5e",
    "metadata": {},
    "source": [
-    "## **Startegy - 1**"
+    "## **Strategy - 1**"
    ]
   },
   {
@@ -11756,7 +11756,7 @@
    "id": "655a1109-9d25-4d3a-89c9-3aedfcac66ae",
    "metadata": {},
    "source": [
-    "## **Startegy - 2**"
+    "## **Strategy - 2**"
    ]
   },
   {
